# rapstat

./: CONTEXT.md  Cargo.toml  STATUS.md  rapstat.code-workspace  rapstat_spec_v1.1.md  rapview_spec_v1.0.md
.github/workflows/: release.yml
.rapstat/: config.toml
.rapstat/hooks/: pre-commit  pre-push
src/: config.rs  context_check.rs  git.rs  main.rs  registry.rs  status_model.rs
src/commands/: check.rs  init.rs  mod.rs  projects.rs  scan.rs  status.rs
